# DataStructure

./: CMakeLists.txt  ReadMe.md  array_list.c  array_list.h  heap.c  heap.h  main.c  queue.c  queue.h  stack.c  tests.c  tests.h
scripts/: array_list.c  array_list.h  heap.c  heap.h  queue.c  queue.h  stack.c  stack.h
tests/: tests.c
